// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for a empty .eslintrc.yaml should add TypeScript ESLint to empty .eslintrc.yaml 1`] = `
Object {
  "/Users/youngmink/projects/personal/mrm-task-typescript-eslint/.eslintrc.yaml": "parser: '@typescript-eslint/parser'
settings:
  import/parsers:
    '@typescript-eslint/parser':
      - .js
      - .jsx
      - .ts
      - .tsx
plugins:
  - '@typescript-eslint'
extends:
  - 'plugin:@typescript-eslint/recommended'
  - 'plugin:import/typescript'
",
}
`;

exports[`for a preexisting .eslintrc 2 should add TypeScript ESLint to preexisting .eslintrc 2 1`] = `
Object {
  "/Users/youngmink/projects/personal/mrm-task-typescript-eslint/.eslintrc": "{
  \\"extends\\": [
    \\"plugin:@typescript-eslint/recommended\\",
    \\"plugin:import/typescript\\",
    \\"airbnb\\",
    \\"prettier\\"
  ],
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"plugins\\": [
    \\"react\\",
    \\"prettier\\",
    \\"@typescript-eslint\\"
  ],
  \\"parserOptions\\": {
    \\"ecmaFeatures\\": {
      \\"experimentalObjectRestSpread\\": 1
    },
    \\"sourceType\\": \\"script\\"
  },
  \\"settings\\": {
    \\"import/parsers\\": {
      \\"@typescript-eslint/parser\\": [
        \\".js\\",
        \\".jsx\\",
        \\".ts\\",
        \\".tsx\\"
      ]
    }
  }
}",
}
`;

exports[`for a preexisting .eslintrc should add TypeScript ESLint to preexisting .eslintrc 1`] = `
Object {
  "/Users/youngmink/projects/personal/mrm-task-typescript-eslint/.eslintrc": "{
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"settings\\": {
    \\"import/parsers\\": {
      \\"@typescript-eslint/parser\\": [
        \\".js\\",
        \\".jsx\\",
        \\".ts\\",
        \\".tsx\\"
      ]
    }
  },
  \\"plugins\\": [
    \\"@typescript-eslint\\"
  ],
  \\"extends\\": [
    \\"plugin:@typescript-eslint/recommended\\",
    \\"plugin:import/typescript\\"
  ]
}",
  "/Users/youngmink/projects/personal/mrm-task-typescript-eslint/eslintrc": "{}",
}
`;

exports[`for a preexisting .eslintrc.json should add TypeScript ESLint to preexisting .eslintrc.json 1`] = `
Object {
  "/Users/youngmink/projects/personal/mrm-task-typescript-eslint/.eslintrc.json": "{
  \\"parser\\": \\"@typescript-eslint/parser\\",
  \\"settings\\": {
    \\"import/parsers\\": {
      \\"@typescript-eslint/parser\\": [
        \\".js\\",
        \\".jsx\\",
        \\".ts\\",
        \\".tsx\\"
      ]
    }
  },
  \\"plugins\\": [
    \\"@typescript-eslint\\"
  ],
  \\"extends\\": [
    \\"plugin:@typescript-eslint/recommended\\",
    \\"plugin:import/typescript\\"
  ]
}",
}
`;

exports[`for a preexisting .eslintrc.yaml should add TypeScript ESLint to preexisting .eslintrc.yaml 1`] = `
Object {
  "/Users/youngmink/projects/personal/mrm-task-typescript-eslint/.eslintrc.yaml": "parser: '@typescript-eslint/parser'
settings:
  import/parsers:
    '@typescript-eslint/parser':
      - .js
      - .jsx
      - .ts
      - .tsx
plugins:
  - '@typescript-eslint'
extends:
  - 'plugin:@typescript-eslint/recommended'
  - 'plugin:import/typescript'",
}
`;
